[package]
name = "zk-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = "0.24.1"
blstrs = "0.6.0"
ff = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.6"
pairing = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"